# Manejador-de-imagenes

c++_smfl/: CMakeLists.txt  main.cpp
